--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	  
     <iframe width="640" height="390" src="https://www.youtube.com/embed/_83urK9rO4U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Change background color
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
