--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Change background color
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Black</a>
+        <a class="dropdown-item" title="You can have it any color you like, as long as it's black." href="#">Black</a>
       </div>
     </div>
 	  
